<resources>
    <string name="app_name">MyMovies</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_">Add to my movies</string>
    <string name="title_activity_search__acticity">Search movies</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_dialog_first" translatable="false">Download top rated movies?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="top_rated">Top rated movies</string>
    <string name="upcoming">Upcoming movies</string>
    <string name="now_playing">Movies in theatres</string>
    <string name="mymovies">My movies</string>
    <string name="search_toast">No movie found for search</string>
    <string name="dialog_remove">Do you want remove this movie?</string>
    <string name="search">search</string>
    <string name="overview">overview:</string>
    <string name="title">title:</string>
    <string name="tr_api"><![CDATA[https://api.themoviedb.org/3/movie/top_rated?api_key=5c4718b737ba79ddbc58a56d4273fab9&language=en-US&page=1]]></string>
    <string name="upco_api"><![CDATA[https://api.themoviedb.org/3/movie/upcoming?api_key=5c4718b737ba79ddbc58a56d4273fab9&language=en-US&page=1]]></string>
    <string name="np_api"><![CDATA[https://api.themoviedb.org/3/movie/now_playing?api_key=5c4718b737ba79ddbc58a56d4273fab9&language=en-US&page=1]]></string>
    <string name="src_api">https://api.themoviedb.org/3/search/movie?api_key=5c4718b737ba79ddbc58a56d4273fab9&amp;language=en&amp;query=</string>
    <string name="add_act_title">Add to MyMovies</string>
    <string name="change_language">Change language</string>
    <string name="english">English</string>
    <string name="hebrew">Hebrew</string>
    <string name="dialog_add">Add to my movies?</string>
</resources>
