<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/movies_bcg2"
    android:fitsSystemWindows="true"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example1.ziv24.mymovies1.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:showIn="@layout/activity_main">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_toprated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:padding="3dp"
                android:shadowColor="@color/cardview_light_background"
                android:shadowRadius="50"
                android:text="@string/top_rated"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_toprated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:isScrollContainer="false"
                android:padding="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_toprated">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_upcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:padding="3dp"
                android:shadowColor="@color/cardview_light_background"
                android:shadowRadius="50"
                android:text="@string/upcoming"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_toprated" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_upcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:isScrollContainer="false"
                android:padding="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_upcoming">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_nowplaying"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:padding="3dp"
                android:shadowColor="@color/cardview_light_background"
                android:shadowRadius="50"
                android:text="@string/now_playing"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_upcoming" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_nowplaying"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:isScrollContainer="false"
                android:padding="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_nowplaying">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_mymovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:padding="3dp"
                android:shadowColor="@color/cardview_light_background"
                android:shadowRadius="50"
                android:text="@string/mymovies"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_nowplaying" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_mymovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:isScrollContainer="false"
                android:padding="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_mymovies">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
